crates/llvmkit-ir/tests/compile_fail/unverified_output_requires_verify.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/unverified_output_requires_verify.rs:24:25
   |
24 |         let _ = mpm.run(unverified, &mut mam, &mut fam);
   |                     --- ^^^^^^^^^^ expected `Module<'_, Brand<'_>, Verified>`, found `Module<'_>`
   |                     |
   |                     arguments to this method are incorrect
   |
   = note: expected struct `Module<'_, Brand<'_>, Verified>`
              found struct `Module<'_, Brand<'_>, Unverified>`
note: method defined here
  --> src/pass_manager.rs
   |
   |     pub fn run(
   |            ^^^
